@@ -1,5 +1,8 @@
 2025-01-27  Oliver Kiddle  <opk@zsh.org>
 
+	* 53329: Src/Modules/hlgroup.c: adapt .zle.sgr for CSI sequences
+	that use : instead of ;
+
 	* github #128: GI <gi1242+zsh@gmail.com>:
 	Completion/Unix/Command/_vim: Updated completion for neovim
 
